# whatsapp-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  m4.json
bindings/python/: Cargo.toml
bindings/typescript/: Cargo.toml
bridge/: go.mod  go.sum  main.go
crates/domain/: Cargo.toml
crates/domain/src/: ports.rs
crates/domain/src/models/: chat.rs  contact.rs  jid.rs  message.rs  mod.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: bridge.rs  cli_common.rs  lib.rs  main.rs  poll_config.rs  poll_engine.rs  protocol.rs  server.rs  tools.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
crates/wa-client/: Cargo.toml  README.md  build.rs
crates/wa-client/proto/: signal.proto
crates/wa-client/src/: client.rs  lib.rs  media.rs  qr.rs  socket.rs  store.rs  usync.rs
crates/wa-client/src/binary/: decoder.rs  encoder.rs  mod.rs  node.rs  noise.rs  tokens.rs
crates/wa-client/src/crypto/: cbc.rs  envelope.rs  mod.rs  ratchet.rs  sender_key.rs  session.rs  x3dh.rs  xeddsa.rs
