[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/mcp-server",
    "crates/storage-sqlite",
    "crates/wa-client",
    "bindings/python",
    "bindings/typescript"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Giulio Leone"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
prost = "0.13"
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
