[package]
name = "wa-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wa-domain = { path = "../domain" }
wa-client = { path = "../wa-client" }
wa-storage-sqlite = { path = "../storage-sqlite" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
