[package]
name = "wa-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "wa-mcp-server"
path = "src/main.rs"

[[bin]]
name = "wa-pair"
path = "src/bin/wa_pair.rs"

[[bin]]
name = "wa-send"
path = "src/bin/wa_send.rs"

[[bin]]
name = "wa-mcp-bridge"
path = "src/bin/wa_mcp_bridge.rs"

[[bin]]
name = "wa-broadcast"
path = "src/bin/wa_broadcast.rs"

[[bin]]
name = "wa-track"
path = "src/bin/wa_track.rs"

[[bin]]
name = "wa-poll"
path = "src/bin/wa_poll.rs"

[[bin]]
name = "wa-status"
path = "src/bin/wa_status.rs"

[dependencies]
wa-domain = { path = "../domain" }
wa-client = { path = "../wa-client" }
wa-storage-sqlite = { path = "../storage-sqlite" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
base64.workspace = true
async-trait = "0.1"
serde_yaml = "0.9"
regex = "1"
