[package]
name = "wa-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wa-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
rand.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
