[package]
name = "wa-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wa-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
rand.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
hex = "0.4"
async-trait = "0.1"
lazy_static = "1.4"
x25519_dalek = { version = "2.0", package = "x25519-dalek", features = ["static_secrets"] }
hkdf = "0.12"
hmac = "0.12"
ed25519-dalek = "2.1"
curve25519-dalek = { version = "4", features = ["group"] }
aes = "0.8"
cbc = "0.1"
futures-util = "0.3"
url = "2.5"
chrono = "0.4"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1.0"
md5 = "0.7"

[build-dependencies]
prost-build = "0.13"
